@@ -7,6 +7,9 @@
     * src/widgets/geda_handlebox.c: Eliminate ancillary GtkBin from function
       geda_handle_box_map.
 
+    * src/widgets/geda_invisible.c: Eliminate widget_class->show override and
+      remove function geda_invisible_show.
+
 2020-03-05 Wiley E. Hill <wileyhill@gmail.com>
 
     * src/widgets/geda_action.c: Remove unnecessary check for GEDA_IS_TOGGLE_ACTION
